# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# deqp build

import("//build/ohos.gni")

group("deqp") {
    deps = [
      "//third_party/VK-GL-CTS/framework/delibs/debase:libdeqp_debase",
      "//third_party/VK-GL-CTS/framework/delibs/depool:libdeqp_depool",
      "//third_party/VK-GL-CTS/framework/delibs/dethread:libdeqp_dethread",
      "//third_party/VK-GL-CTS/framework/delibs/deutil:libdeqp_deutil",
      "//third_party/VK-GL-CTS/framework/delibs/decpp:libdeqp_decpp",
      "//third_party/VK-GL-CTS/framework/delibs/destream:libdeqp_destream",
      "//third_party/VK-GL-CTS/framework/opengl/wrapper:libdeqp_glwrapper",
      "//third_party/VK-GL-CTS/framework/qphelper:libdeqp_qphelper",
      "//third_party/VK-GL-CTS/framework/common:libdeqp_tcutil",   #deps openglcts/modules/glesext
      "//third_party/VK-GL-CTS/framework/opengl:libdeqp_glutil",   #deps common rr
      "//third_party/VK-GL-CTS/framework/egl/wrapper:libdeqp_eglwrapper",  #deps common
      "//third_party/VK-GL-CTS/framework/randomshaders:libdeqp_randomshaders",  #deps common
      "//third_party/VK-GL-CTS/framework/referencerenderer:libdeqp_referencerenderer",
      "//third_party/VK-GL-CTS/framework/xexml:libdeqp_xexml",
      "//third_party/VK-GL-CTS/modules:deqp_modules",
      "//third_party/glslang:glslang",
    ]
}
