# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# deqp modules build

import("//build/ohos.gni")

group("deqp_modules") {
    deps = [
        "//third_party/vk-gl-cts/modules/egl:libdeqp-egl",
        "//third_party/vk-gl-cts/modules/gles2:libdeqp-gles2",
        "//third_party/vk-gl-cts/modules/gles3:libdeqp-gles3",
        "//third_party/vk-gl-cts/modules/gles31:libdeqp-gles31",
        "//third_party/vk-gl-cts/modules/glshared:libdeqp-gl-shared",
        #"//third_party/vk-gl-cts/modules/internal:libdeqp-internal-tests",
    ]
}
