# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# framework eglutil build

import("//build/ohos.gni")
import("//third_party/VK-GL-CTS/vk_gl_cts.gni")

config("eglutil_config") {
  cflags_cc = deqp_common_cflags_cc
  defines = deqp_common_defines
}

ohos_source_set("eglutil_source") {
  sources = [
    "//third_party/VK-GL-CTS/framework/egl/egluCallLogWrapper.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluConfigFilter.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluConfigInfo.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluDefs.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluGLContextFactory.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluGLFunctionLoader.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluGLUtil.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluNativeDisplay.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluNativePixmap.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluNativeWindow.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluPlatform.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluStaticESLibrary.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluStrUtil.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluUnique.cpp",
    "//third_party/VK-GL-CTS/framework/egl/egluUtil.cpp",
  ]
  include_dirs = deqp_common_include_dirs

  deps = [
    "//third_party/VK-GL-CTS/framework/common:libdeqp_tcutil",
    "//third_party/VK-GL-CTS/framework/egl/wrapper:libdeqp_eglwrapper",
    "//third_party/VK-GL-CTS/framework/opengl:libdeqp_glutil",
    "//third_party/VK-GL-CTS/framework/opengl/wrapper:libdeqp_glwrapper",
    "//third_party/VK-GL-CTS/framework/common:libdeqp_tcutil",
    "//third_party/zlib:libz",
    "//third_party/libpng:libpng",
  ]

  configs = [ ":eglutil_config" ]
#   lib_dirs = [
#     "//third_party/VK-GL-CTS/outlibs"
#   ]
#   libs = [
#     "png",
#     "z",
#     # "glslang",
#     # "SPIRV",
#     # "SPVRemapper",
#     # "SPIRV-Tools",
#     # "SPIRV-Tools-link",
#     # "SPIRV-Tools-lint",
#     # "SPIRV-Tools-opt",
#     # "SPIRV-Tools-reduce",
#     # "MachineIndependent",
#     # "OGLCompiler",
#     # "OSDependent",
#     # "GenericCodeGen",
#   ]

}

ohos_static_library("libdeqp_eglutil") {
    deps = [ ":eglutil_source" ]
    part_name = "graphic_standard"
    subsystem_name = "graphic"
}