# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# deqp framwork qphelper build

import("//build/ohos.gni")
import("//third_party/vk-gl-cts/vk_gl_cts.gni")

config("deqp_qphelper_config") {
  cflags_cc = deqp_common_cflags_cc
  defines = deqp_common_defines
  defines -=[
    "DE_OS=DE_OS_UNIX"
  ]
  defines +=[
    "DE_OS=DE_OS_QNX",
    "QP_SUPPORT_PNG",
  ]
}

ohos_source_set("deqp_qphelper_source") {
  sources = [
    "//third_party/vk-gl-cts/framework/qphelper/qpCrashHandler.c",  
    "//third_party/vk-gl-cts/framework/qphelper/qpDebugOut.c",        
    "//third_party/vk-gl-cts/framework/qphelper/qpInfo.c",  
    "//third_party/vk-gl-cts/framework/qphelper/qpTestLog.c",                
    "//third_party/vk-gl-cts/framework/qphelper/qpWatchDog.c",        
    "//third_party/vk-gl-cts/framework/qphelper/qpXmlWriter.c"
  ]

  include_dirs = deqp_common_include_dirs
  include_dirs += ["//third_party/libpng"]
  deps = [  
    "//third_party/vk-gl-cts/framework/delibs/debase:libdeqp_debase",
    "//third_party/vk-gl-cts/framework/delibs/depool:libdeqp_depool",
    "//third_party/vk-gl-cts/framework/delibs/dethread:libdeqp_dethread",
    "//third_party/vk-gl-cts/framework/delibs/deutil:libdeqp_deutil"
  ]

  configs = [ ":deqp_qphelper_config" ]
}

ohos_static_library("libdeqp_qphelper") {
  deps = [ ":deqp_qphelper_source" ]
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}