# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# framework referencerenderer build

import("//build/ohos.gni")
import("//third_party/vk-gl-cts/vk_gl_cts.gni")

config("referencerenderer_config") {
  cflags_cc = deqp_common_cflags_cc
  defines = deqp_common_defines
}

ohos_source_set("referencerenderer_source") {
  sources = [
    "//third_party/vk-gl-cts/framework/referencerenderer/rrDefs.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrFragmentOperations.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrMultisamplePixelBufferAccess.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrPrimitivePacket.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrRasterizer.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrRenderer.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrShaders.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrShadingContext.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrVertexAttrib.cpp",
    "//third_party/vk-gl-cts/framework/referencerenderer/rrVertexPacket.cpp",
  ]
  include_dirs = deqp_common_include_dirs

  deps = [
    "//third_party/vk-gl-cts/framework/delibs/decpp:libdeqp_decpp",
    "//third_party/vk-gl-cts/framework/delibs/debase:libdeqp_debase",
    "//third_party/vk-gl-cts/framework/common:libdeqp_tcutil",
  ]

  configs = [ ":referencerenderer_config" ]

}

ohos_static_library("libdeqp_referencerenderer") {
    deps = [ ":referencerenderer_source" ]
    part_name = "graphic_standard"
    subsystem_name = "graphic"
}